@@ -36,6 +36,7 @@
           </xs:element>
         </xs:sequence>
         <xs:attribute type="xs:string" name="resultsBehavior" use="optional" default="replace"/>
+        <xs:attribute type="xs:boolean" name="enabled" use="required"/>
       </xs:complexType>
     </xs:element>
   </xs:schema>
